syntax = "proto3";

package v1;

option go_package = "./v1";

import "google/protobuf/wrappers.proto";

service TokenService {
	rpc Create(TokenCreateRequest) returns (TokenResponse);
}

service DomainService {
	rpc List(DomainsListRequest) returns (DomainsResponse);
	rpc Get(DomainGetRequest) returns (DomainResponse);
	rpc Create(DomainCreateRequest) returns (DomainResponse);
	rpc Update(DomainUpdateRequest) returns (DomainResponse);
	rpc Delete(DomainDeleteRequest) returns (DomainResponse);
}
service RecordService {
    rpc List(RecordsListRequest) returns (RecordsResponse);
	rpc Delete(RecordDeleteRequest) returns (RecordResponse);
	rpc Update(RecordUpdateRequest) returns (RecordResponse);
	rpc Create(RecordCreateRequest) returns (RecordResponse);
}

// Tokens
message TokenCreateRequest {
	string issuer = 1;
	repeated string domains = 2;
	repeated string permissions = 3;
}

message TokenResponse {
	string token = 1;
}

// Domains

message Domain {
	string id = 1;
	string name = 2;
	uint32 ttl = 3;
	string zone_file = 4;
	string url = 5;
	repeated string nameservers = 6;
}

message DomainsListRequest {
	repeated string domains = 1;
}
message DomainGetRequest {
    string name = 1;
}
message DomainCreateRequest {
    string name = 1;
    repeated string nameservers = 2;
	google.protobuf.StringValue url = 5;
}
message DomainUpdateRequest {
    string name = 1;
    repeated string nameservers = 2;
	google.protobuf.StringValue url = 5;
}
message DomainDeleteRequest {
    string name = 1;
}
message DomainsResponse {
    repeated Domain domains = 1;
}
message DomainResponse {
    Domain domain = 1;
}

// Records

message Record {
	RecordType type = 1;
	string name = 2;
	string data = 3;
	int32 priority = 4;
	uint32 port = 5;
	uint32 ttl = 6;
	int32 weight = 7;
	int32 flags = 8;
	string tag = 9;
}

enum RecordType {
	UNKNOWN = 0;
	A = 1;
	A6 = 2;
	AAAA = 3;
	AFSDB = 4;
	ALIAS = 5;
	ANY = 6;
	CAA = 7;
	CDNSKEY = 8;
	CDS = 9;
	CERT = 10;
	CNAME = 11;
	DHCID = 12;
	DLV = 13;
	DNAME = 14;
	DNSKEY = 15;
	DS = 16;
	EUI48 = 17;
	EUI64 = 18;
	HINFO = 19;
	IPSECKEY = 20;
	KEY = 21;
	KX = 22;
	LOC = 23;
	LUA = 24;
	MAILA = 25;
	MAILB = 26;
	MINFO = 27;
	MR = 28;
	MX = 29;
	NAPTR = 30;
	NS = 31;
	NSEC = 32;
	NSEC3 = 33;
	NSEC3PARAM = 34;
	OPENPGPKEY = 35;
	PTR = 36;
	RKEY = 37;
	RP = 38;
	RRSIG = 39;
	SIG = 40;
	SMIMEA = 41;
	SOA = 42;
	SPF = 43;
	SRV = 44;
	SSHFP = 45;
	TKEY = 46;
	TLSA = 47;
	TSIG = 48;
	TXT = 49;
	URI = 50;
	WKS = 51;
	// keep this always the highest number
	ZZZ = 52;
}

message RecordsListRequest {
	string domain = 1;
    RecordType type = 2;
    google.protobuf.StringValue name = 3;
}
message RecordCreateRequest {
    RecordType type = 1;
	string name = 2;
	string data = 3;
	int32 priority = 4;
	uint32 port = 5;
	uint32 ttl = 6;
	int32 weight = 7;
	int32 flags = 8;
    string tag = 9;
}
message RecordUpdateRequest {
    string uuid = 1;
    RecordType type = 2;
	string name = 3;
	string data = 4;
	int32 priority = 5;
	uint32 port = 6;
	uint32 ttl = 7;
	int32 weight = 8;
	int32 flags = 9;
	string tag = 10;
}
message RecordDeleteRequest {
	RecordType type = 1;
	string name = 2;
	string data = 3;
}

message RecordsResponse {
    repeated Record records = 1;
}
message RecordResponse {
    Record record = 1;
}